--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
                   <mainClass>com.leafriend.kspay.receiver.Launcher</mainClass>
                 </program>
               </programs>
+              <copyConfigurationDirectory>true</copyConfigurationDirectory>
             </configuration>
           </plugin>
 
