--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -4,11 +4,8 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
 
-log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=test.log
-log4j.appender.logfile.MaxFileSize=1024KB
-# Keep three backup files.
-log4j.appender.logfile.MaxBackupIndex=8
-# Pattern to output: date priority [category] - message
+log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.logfile.File=kspay-receiver.log
+log4j.appender.logfile.DatePattern='.'yyyy-MM-dd
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
