--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 
       </dependencies>
       <build>
+
+        <resources>
+          <resource>
+            <directory>src/main/config</directory>
+          </resource>
+        </resources>
+
         <pluginManagement>
           <plugins>
 
@@ -67,6 +74,7 @@
 
           </plugins>
         </pluginManagement>
+
         <plugins>
 
           <plugin>
@@ -111,6 +119,7 @@
           </plugin>
 
         </plugins>
+
       </build>
     </profile>
   </profiles>
