클래스패스에 임의의 라이브러리를 추가할 수 있게 수정

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,9 @@
                 </program>
               </programs>
               <copyConfigurationDirectory>true</copyConfigurationDirectory>
+              <!-- useWildcardClassPath 옵션을 true로 할 경우 필요 -->
+              <repositoryLayout>flat</repositoryLayout>
+              <useWildcardClassPath>true</useWildcardClassPath>
             </configuration>
           </plugin>
 
