--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,12 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.leafriend.kspay</groupId>
-  <artifactId>kspay-receiver</artifactId>
+  <artifactId>kspay</artifactId>
   <version>0.1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <modules>
+    <module>kspay-receiver</module>
+  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,117 +19,6 @@
     <org.slf4j.version>1.7.12</org.slf4j.version>
     <log4j.version>2.4</log4j.version>
   </properties>
-
-  <profiles>
-    <profile>
-      <id>standalone</id>
-      <dependencies>
-
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-          <version>${org.slf4j.version}</version>
-          <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-core</artifactId>
-          <version>${log4j.version}</version>
-          <scope>runtime</scope>
-        </dependency>
-
-      </dependencies>
-      <build>
-
-        <resources>
-          <resource>
-            <directory>src/main/config</directory>
-          </resource>
-        </resources>
-
-        <pluginManagement>
-          <plugins>
-
-            <plugin>
-              <groupId>org.eclipse.m2e</groupId>
-              <artifactId>lifecycle-mapping</artifactId>
-              <version>1.0.0</version>
-              <configuration>
-                <lifecycleMappingMetadata>
-                  <pluginExecutions>
-                    <pluginExecution>
-                      <pluginExecutionFilter>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <versionRange>[1.4.0,)</versionRange>
-                        <goals>
-                          <goal>exec</goal>
-                        </goals>
-                      </pluginExecutionFilter>
-                      <action>
-                        <ignore />
-                      </action>
-                    </pluginExecution>
-                  </pluginExecutions>
-                </lifecycleMappingMetadata>
-              </configuration>
-            </plugin>
-
-          </plugins>
-        </pluginManagement>
-
-        <plugins>
-
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>appassembler-maven-plugin</artifactId>
-            <version>1.10</version>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>assemble</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <programs>
-                <program>
-                  <id>kspay-receiver</id>
-                  <mainClass>com.leafriend.kspay.receiver.Launcher</mainClass>
-                </program>
-              </programs>
-              <copyConfigurationDirectory>true</copyConfigurationDirectory>
-              <!-- useWildcardClassPath 옵션을 true로 할 경우 필요 -->
-              <repositoryLayout>flat</repositoryLayout>
-              <useWildcardClassPath>true</useWildcardClassPath>
-            </configuration>
-          </plugin>
-
-          <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <version>2.6</version>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>assembly</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <descriptors>
-                <descriptor>src/assembly/standalone.xml</descriptor>
-              </descriptors>
-            </configuration>
-          </plugin>
-
-        </plugins>
-
-      </build>
-    </profile>
-  </profiles>
 
   <build>
     <plugins>
@@ -165,13 +58,6 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
       <version>${org.mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.2.147</version>
       <scope>test</scope>
     </dependency>
 
