--- a/kspay-sendingtester/pom.xml
+++ b/kspay-sendingtester/pom.xml
@@ -3,13 +3,8 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.leafriend.kspay</groupId>
-  <artifactId>kspay</artifactId>
+  <artifactId>kspay-sendingtester</artifactId>
   <version>0.1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-    <module>kspay-receiver</module>
-    <module>kspay-sendingtester</module>
-  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,10 +29,58 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>appassembler-maven-plugin</artifactId>
+        <version>1.10</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>assemble</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <programs>
+            <program>
+              <id>kspay-sendingtester</id>
+              <mainClass>com.leafriend.kspay.sendingtester.Launcher</mainClass>
+            </program>
+          </programs>
+          <copyConfigurationDirectory>true</copyConfigurationDirectory>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>assembly</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <descriptors>
+            <descriptor>src/assembly/assembly.xml</descriptor>
+          </descriptors>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.leafriend.kspay</groupId>
+      <artifactId>kspay-receiver</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
 
     <!-- Testing: JUnit, Hamcrest and Mockito -->
 
@@ -74,14 +117,14 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>${org.slf4j.version}</version>
-      <scope>test</scope>
+      <scope>runtime</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
       <version>${log4j.version}</version>
-      <scope>test</scope>
+      <scope>runtime</scope>
     </dependency>
 
   </dependencies>
