--- a/kspay-sendingtester/pom.xml
+++ b/kspay-sendingtester/pom.xml
@@ -2,19 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.leafriend.kspay</groupId>
+  <parent>
+    <groupId>com.leafriend.kspay</groupId>
+    <artifactId>kspay</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
+  </parent>
   <artifactId>kspay-sendingtester</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- Library Versions -->
-    <junit.version>4.12</junit.version>
-    <org.hamcrest.version>1.3</org.hamcrest.version>
-    <org.mockito.version>1.10.19</org.mockito.version>
-    <org.slf4j.version>1.7.12</org.slf4j.version>
-    <log4j.version>2.4</log4j.version>
-  </properties>
 
   <build>
     <plugins>
@@ -80,51 +73,6 @@
       <artifactId>kspay-receiver</artifactId>
       <version>0.1.0-SNAPSHOT</version>
       <scope>test</scope>
-    </dependency>
-
-    <!-- Testing: JUnit, Hamcrest and Mockito -->
-
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-library</artifactId>
-      <version>${org.hamcrest.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>${org.mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Logging: SLF4J using Log4j -->
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${org.slf4j.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>${org.slf4j.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>${log4j.version}</version>
-      <scope>runtime</scope>
     </dependency>
 
   </dependencies>
