--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <org.hamcrest.version>1.3</org.hamcrest.version>
     <org.mockito.version>1.10.19</org.mockito.version>
     <org.slf4j.version>1.7.12</org.slf4j.version>
-    <log4j.version>2.4</log4j.version>
+    <log4j.version>1.2.17</log4j.version>
   </properties>
 
   <build>
@@ -78,8 +78,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
       <version>${log4j.version}</version>
       <scope>test</scope>
     </dependency>
