--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jdk.source.version>1.6</jdk.source.version>
+    <jdk.target.version>1.6</jdk.target.version>
     <!-- Library Versions -->
     <junit.version>4.12</junit.version>
     <org.hamcrest.version>1.3</org.hamcrest.version>
@@ -27,10 +29,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
+        <version>3.3</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>${jdk.source.version}</source>
+          <target>${jdk.target.version}</target>
         </configuration>
       </plugin>
 
