--- a/kspay-receiver/pom.xml
+++ b/kspay-receiver/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.leafriend.kspay</groupId>
     <artifactId>kspay</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.1</version>
   </parent>
   <artifactId>kspay-receiver</artifactId>
 
