--- a/kspay-sendingtester/pom.xml
+++ b/kspay-sendingtester/pom.xml
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>com.leafriend.kspay</groupId>
       <artifactId>kspay-receiver</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.1</version>
       <scope>test</scope>
     </dependency>
 
